--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    Introduction to html
+    <a href="https://www.google.com/">Google 
+        <img src="https://th.bing.com/th/id/OIP.aL-2Fnkc27ind72ecm6sZwHaHP?w=190&h=186&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width: 60px">
+    </a>
+    <a href="index1.html">Another page 
+        <img style="width: 60px;" src="images/page.jpg" >
+    </a>
+    <label style="text-align: center; display: block; width: 500px;
+    border: solid 5px black; margin-top: 80px; background-color: pink;
+    padding: 40px;">Hello HTML</label>
 </body>
 </html>
