--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://www.google.com/">Google 
-        <img src="https://th.bing.com/th/id/OIP.aL-2Fnkc27ind72ecm6sZwHaHP?w=190&h=186&c=7&r=0&o=5&dpr=1.3&pid=1.7" style="width: 60px">
+    <a href="https://www.meetup.com/ru-RU/" style="display: block; text-align: center; margin-top: 200px;">
+        <img src="images/page1.jpg" style="width: 50px;">
+        <label style="width: 400px; display: inline-block; text-align: left; font-size: 32px;">Java meetup Israel</label>
     </a>
-    <a href="index1.html">Another page 
-        <img style="width: 60px;" src="images/page.jpg" >
+    <a href="https://www.google.com/" style="display: block; text-align: center">
+        <img src="images/page2.jpg" style="width: 50px;">
+        <label style="width: 400px; display: inline-block; text-align: left; font-size: 32px;">Google</label>
     </a>
-    <label style="text-align: center; display: block; width: 500px;
-    border: solid 5px black; margin-top: 80px; background-color: pink;
-    padding: 40px;">Hello HTML</label>
+    <a href="https://www.meetup.com/ru-RU/javascript-israel/" style="display: block; text-align: center">
+        <img src="images/page3.jpg" style="width: 50px;">
+        <label style="width: 400px; display: inline-block; text-align: left; font-size: 32px;">JavaScript  meetup Israel</label>
+     </a>
+    <a href="https://www.meetup.com/ru-RU/topics/html/il/" style="display: block; text-align: center">
+        <img src="images/page4.jpg" style="width: 50px;">
+        <label style="width: 400px; display: inline-block; text-align: left; font-size: 32px;">HTML meetup Israel </label>
+    </a>
+    <a href="https://www.meetup.com/ru-RU/react-il/" style="display: block; text-align: center">
+        <img src="images/page5.jpg" style="width: 60px;;">
+        <label style="width: 400px; display: inline-block; text-align: left; font-size: 32px;">React meetup Israel</label> 
+    </a>
 </body>
 </html>
