adds HW5 changes

--- a/index.html
+++ b/index.html
@@ -56,38 +56,38 @@
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/London.jpg" class="thumbnails-image" >
-                    <span class="thumbnails-title">London</span>
+                    <img src="images/Lozanna.jpg" class="thumbnails-image" >
+                    <span class="thumbnails-title">Lozanna</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Paris.jpg" class="thumbnails-image" >
-                    <span class="thumbnails-title">Paris</span>
+                    <img src="images/Sydney.jpg" class="thumbnails-image" >
+                    <span class="thumbnails-title">Sydney</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Florency.jpg" class="thumbnails-image" >
-                    <span class="thumbnails-title">Florence</span>
+                    <img src="images/Madrid.jpg" class="thumbnails-image" >
+                    <span class="thumbnails-title">Madrid</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Tokyo.jpg" class="thumbnails-image" >
-                    <span class="thumbnails-title">Tokyo</span>
+                    <img src="images/Praga.jpg" class="thumbnails-image" >
+                    <span class="thumbnails-title">Praga</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
                     <img src="images/NY.jpg" class="thumbnails-image" >
-                    <span class="thumbnails-title">New York</span>
+                    <span class="thumbnails-title">Varanaci</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/RJ.jpg" class="thumbnails-image" >
-                    <span class="thumbnails-title">Rio de Janeiro</span>
+                    <img src="images/Seul.jpg" class="thumbnails-image" >
+                    <span class="thumbnails-title">Seul</span>
                 </a>
             </li>
         </ul>
