adds HW#7 transformation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,90 +9,94 @@
     <link rel="shortcut icon" href="images/faviconCities.png" type="image/x-icon">
     <title>Cities-Gallery</title>
 </head>
+
 <body>
     <header class="logo">
         <h2>Cities Gallery</h2>
     </header>
     <main class="main-class">
         <section class="details-container">
-            <img src="images/London.jpg" class="details-image">
-            <span class="details-title">Best Cities</span>
+            <div class="details-frame">
+                <img src="images/London.jpg" class="details-image">
+                <span class="details-title">Best Cities</span>
+            </div>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/London.jpg" class="thumbnails-image" >
+                    <img src="images/London.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">London</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Paris.jpg" class="thumbnails-image" >
+                    <img src="images/Paris.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Paris</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Florency.jpg" class="thumbnails-image" >
+                    <img src="images/Florency.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Florence</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Tokyo.jpg" class="thumbnails-image" >
+                    <img src="images/Tokyo.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Tokyo</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/NY.jpg" class="thumbnails-image" >
+                    <img src="images/NY.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">New York</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/RJ.jpg" class="thumbnails-image" >
+                    <img src="images/RJ.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Rio de Janeiro</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Lozanna.jpg" class="thumbnails-image" >
+                    <img src="images/Lozanna.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Lozanna</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Sydney.jpg" class="thumbnails-image" >
+                    <img src="images/Sydney.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Sydney</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Madrid.jpg" class="thumbnails-image" >
+                    <img src="images/Madrid.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Madrid</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Praga.jpg" class="thumbnails-image" >
+                    <img src="images/Praga.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Praga</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/NY.jpg" class="thumbnails-image" >
+                    <img src="images/NY.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Varanaci</span>
                 </a>
             </li>
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="#">
-                    <img src="images/Seul.jpg" class="thumbnails-image" >
+                    <img src="images/Seul.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Seul</span>
                 </a>
             </li>
         </ul>
-        
+
     </main>
 </body>
+
 </html>
