adds HW#8 javascript

--- a/index.html
+++ b/index.html
@@ -23,73 +23,73 @@
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/London.jpg" data-details-title="Сity of gentlemen">
                     <img src="images/London.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">London</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Paris.jpg" data-details-title="Сity of lovers">
                     <img src="images/Paris.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Paris</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
-                    <img src="images/Florency.jpg" class="thumbnails-image">
-                    <span class="thumbnails-title">Florence</span>
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Venecia.jpg" data-details-title="Pearl of italy">
+                    <img src="images/Venecia.jpg" class="thumbnails-image">
+                    <span class="thumbnails-title">Venecia</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Tokyo.jpg" data-details-title="Capital of the Rising Sun">
                     <img src="images/Tokyo.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Tokyo</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/NY.jpg" data-details-title="City of opportunity">
                     <img src="images/NY.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">New York</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/RJ.jpg" data-details-title="Brazilian carnival colors">
                     <img src="images/RJ.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Rio de Janeiro</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Lozanna.jpg" data-details-title="World Olympic capital">
                     <img src="images/Lozanna.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Lozanna</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Sydney.jpg" data-details-title="The harbor city">
                     <img src="images/Sydney.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Sydney</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Madrid.jpg" data-details-title="Flamenco and bullfighting">
                     <img src="images/Madrid.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Madrid</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Praga.jpg" data-details-title="Castle town">
                     <img src="images/Praga.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Praga</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
-                    <img src="images/NY.jpg" class="thumbnails-image">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Varanaci.jpg" data-details-title="City of death">
+                    <img src="images/Varanaci.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Varanaci</span>
                 </a>
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="#">
+                <a class="thumbnails-anchor" href="#" data-details-image="images/Seul.jpg" data-details-title="Eastern palaces and modernity">
                     <img src="images/Seul.jpg" class="thumbnails-image">
                     <span class="thumbnails-title">Seul</span>
                 </a>
@@ -97,6 +97,7 @@
         </ul>
 
     </main>
+    <script src="src/cities.js"></script>
 </body>
 
 </html>
