--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <header class="logo">
         <h2>Cities Gallery</h2>
     </header>
-    <main class="main-class">
+    <main class="main-class hidden">
         <section class="details-container">
             <div class="details-frame">
+                <button id="hide-button" onclick="hideDetails()"> X </button>
                 <img src="images/London.jpg" class="details-image">
                 <span class="details-title">Best Cities</span>
             </div>
